Update reservation and home

--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -392,28 +392,25 @@
                                 <label>Check-Out</label>
                                 <input name="cout" type="date" class="form-control">
                             </div>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-primary" type="button">Check Room Availability</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="well">
-                        <h4>HUMAN VERIFICATION</h4>
-                        <p>Type Below this code 22834 </p>
-                        <br />
-                        <p>
-                            Enter the random code<br />
-                        </p>
-                        <input type="text" name="code1" title="random code" />
-                        <input type="hidden" name="code" value="22834" />
-                        <input type="submit" name="submit" class="btn btn-primary" style="margin-left: 5px;">
+            <div class="row" style="margin-top: 2%;">
+                <div class="col">
+                    <div class="d-grid">
+                        <button class="btn btn-primary btn-lg btn-block" type="button">Submit</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
 
                             
                             
