--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -245,7 +245,7 @@ p.logo_caption {
 }
 
 .hero h4 {
-    font-size: 5em;
+    font-size: 4em;
     color: #ffce14;
     letter-spacing: 27px;
     font-weight: bold;
@@ -254,16 +254,21 @@ p.logo_caption {
 
 .hero h3 {
     color: #fff;
-    font-size: 2em;
-    margin: 20px 0 0;
+    font-size: 1.5em;
+    margin: 10px 0 0;
     letter-spacing: 10px;
     text-transform: uppercase;
     font-weight: 700;
 }
 
+.hero h3 span {
+    background: rgba(0, 0, 0, 0.68);
+    padding: 0 36px;
+}
+
 .hero p {
     color: #ffce14;
-    font-size: 1.5em;
+    font-size: 1em;
     line-height: 1.8em;
     letter-spacing: 11px;
     margin: 1em auto;
@@ -964,6 +969,20 @@ p.about-para-1 {
 }
 
 @media screen and (max-width: 640px) {
+    .hero h4 {
+		font-size: 2em;
+		letter-spacing: 12px;
+	}
+
+    .hero h3 {
+		font-size: 13px;
+	}
+
+    .hero p {
+		letter-spacing: 6px;
+		font-size: .7em;
+	}
+
     .hero h1 {
         font-size: 4em;
     }
@@ -999,6 +1018,21 @@ p.about-para-1 {
 }
 
 @media(max-width:1080px) {
+    .hero h4 {
+		font-size: 3.3em;
+		letter-spacing: 23px;
+	}
+
+    .hero h3 {
+		font-size: 1.2em;
+		letter-spacing: 9px;
+	}
+
+    .hero p {
+		font-size: .9em;
+		letter-spacing: 9px;
+	}
+
     p.logo_caption {
         letter-spacing: 4.7px;
         font-size: 10px;
@@ -1058,6 +1092,20 @@ p.about-para-1 {
     p.logo_caption {
         letter-spacing: 3.2px;
     }
+
+    .hero h4 {
+		font-size: 2.9em;
+		letter-spacing: 20px;
+	}
+
+    .hero h3 {
+		font-size: 1.1em;
+		letter-spacing: 8px;
+	}
+
+    .hero p {
+		letter-spacing: 9px;
+	}
 }
 
 @media(max-width:991px) {
@@ -1096,6 +1144,16 @@ p.about-para-1 {
 }
 
 @media(max-width:480px) {
+    .hero h4 {
+		font-size: 1.5em;
+		letter-spacing: 10px;
+	}
+
+    .hero p {
+		margin: .5em auto;
+		letter-spacing: 4px;
+	}
+
     p.logo_caption {
         letter-spacing: 2.2px;
         line-height: 17px;
@@ -1190,6 +1248,16 @@ p.about-para-1 {
     .banner-bottom h3 span {
         font-size: 19px !important;
     }
+
+    .hero h4 {
+		font-size: 2.5em;
+		letter-spacing: 18px;
+	}
+
+    .hero p {
+		letter-spacing: 6px;
+		font-size: .8em;
+	}
 }
 
 @media(max-width:768px) {
@@ -1368,6 +1436,16 @@ p.about-para-1 {
 }
 
 @media(max-width:736px) {
+    .hero h4 {
+		font-size: 2.1em;
+		letter-spacing: 14px;
+	}
+
+    .hero h3 {
+		font-size: 15px;
+		letter-spacing: 6px;
+	}
+
     .flex-control-nav {
         top: 17%;
     }
@@ -1418,6 +1496,10 @@ p.about-para-1 {
     .pricing-table-main {
         width: 72%;
     }
+
+    .hero p {
+		letter-spacing: 3px;
+	}
 }
 
 @media(max-width:480px) {
@@ -1487,6 +1569,14 @@ p.about-para-1 {
 }
 
 @media(max-width:384px) {
+    .hero h3 {
+		letter-spacing: 5px;
+	}
+
+    .hero p {
+		letter-spacing: 2px;
+	}
+
     .flex-control-nav {
         top: 7%;
     }
@@ -1540,6 +1630,20 @@ p.about-para-1 {
 }
 
 @media(max-width:320px) {
+    .hero h4 {
+		font-size: 1.3em;
+		letter-spacing: 8px;
+	}
+
+    .hero p {
+		letter-spacing: 0.4px;
+	}
+
+    .hero h3 {
+		letter-spacing: 3px;
+		font-size: 12px;
+	}
+
     .flex-control-nav {
         top: 5%;
         right: 0%;
@@ -1563,6 +1667,10 @@ p.about-para-1 {
         padding: 61px 0;
         font-size: 23px;
         letter-spacing: 3.5px;
+    }
+
+    .hero h4 {
+        font-size: 3.5em;
     }
 }
 
