--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,9 +19,9 @@
                 <nav class="menu menu--iris">
                     <ul class="nav navbar-nav menu__list">
                         <li class="menu__item menu__item--current"><a href="" class="menu__link">Home</a></li>
-                        <li class="menu__item"><a href="/home#about" class="menu__link scroll">About</a></li>
+                        <li class="menu__item"><a href="#about" class="menu__link scroll">About</a></li>
                         <li class="menu__item"><a href="#team" class="menu__link scroll">Team</a></li>
-                        <li class="menu__item"><a href="/home#gallery" class="menu__link scroll">Gallery</a></li>
+                        <li class="menu__item"><a href="#gallery" class="menu__link scroll">Gallery</a></li>
                         <li class="menu__item"><a href="#rooms" class="menu__link scroll">Rooms</a></li>
                         <li class="menu__item"><a href="#contact" class="menu__link scroll">Contact Us</a></li>
                     </ul>
