--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,64 +1,4 @@
-.navbar {
-    font-weight: 100;
-    font-family: "Raleway", sans-serif;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 3
-}
-
-.navbar .navbar-brand h3 {
-    font-weight: 300
-}
-
-.navbar .nav-item {
-    font-size: 1.4rem
-}
-
-.navbar .nav-link:hover {
-    transition: border 0.2s;
-    border-bottom: 1px solid white
-}
-
-#showcase {
-    background: url("../../../assets/images/resort-scene-03.jpeg") center/cover no-repeat;
-    font-family: "Raleway", sans-serif;
-    min-height: 750px;
-    position: relative
-}
-
-#showcase #overlay {
-    background: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1
-}
-
-#showcase #header {
-    z-index: 2
-}
-
-#showcase h1 {
-    font-family: "Questrial", sans-serif;
-    line-height: 1
-}
-
-#showcase #bookBtn {
-    font-size: 1.5rem;
-    border-radius: 2rem
-}
-
-#quotes i {
-    opacity: 0.3
-}
-
-#footer {
-    font-weight: 100
-}
+@import url(../home/home.component.css);
 
 .login_btn {
     width: 100%;
@@ -78,22 +18,4 @@
 .close_btn:focus {
     box-shadow: none !important;
     outline: 0px !important;
-}
-
-@media (max-width: 768px) {
-    .navbar {
-        background: #1f1f1f
-    }
-
-    .navbar .nav-link:hover {
-        border-bottom: none
-    }
-
-    #showcase {
-        min-height: 500px
-    }
-
-    #showcase h1 {
-        font-size: 4rem
-    }
 }
