--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,54 +1,67 @@
-<nav class="navbar navbar-expand-md navbar-dark">
-    <div class="container-fluid">
-        <a href="#" class="navbar-brand">
-            <h3 class="mb-0">Resort Admin Console</h3>
-        </a>
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#adminNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="adminNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a [routerLink]="'/home'" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
+<div class="navigation">
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="navbar-header navbar-left">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#hotelNav">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <h2>
+                    <a class="navbar-brand" href="#">SWAPNO <span>PURAN</span>
+                        <p class="logo_caption">Admin Console</p>
+                    </a>
+                </h2>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right" id="hotelNav">
+                <nav class="menu menu--iris">
+                    <ul class="nav navbar-nav menu__list">
+                        <li class="menu__item"><a [routerLink]="'/home'" class="menu__link">Home</a></li>
+                        <li class="menu__item"><a href="#about" class="menu__link scroll">About</a></li>
+                        <li class="menu__item"><a href="#team" class="menu__link scroll">Team</a></li>
+                        <li class="menu__item"><a href="#gallery" class="menu__link scroll">Gallery</a></li>
+                        <li class="menu__item"><a href="#rooms" class="menu__link scroll">Rooms</a></li>
+                        <li class="menu__item"><a href="#contact" class="menu__link scroll">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </nav>
+
+    </div>
+</div>
+
+<div class="fade-carousel slide" id="bs-carousel">
+    <!-- Overlay -->
+    <div class="overlay"></div>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item slides active">
+            <div class="slide-1"></div>
+            <div class="hero">
+                <div>
+                    <h4>SWAPNO PURAN RESORT</h4>
+                    <h3>Making your dream vacation come true</h3>
+                    <p>Welcome to our hotels</p>
+                </div>
+                <button type="button" class="btn btn-hero btn-lg" data-toggle="modal" data-target="#loginModal">
+                    LOGIN
+                  </button>
+            </div>
         </div>
     </div>
-</nav>
+</div>
 
-<section id="showcase" class="d-flex justify-content-center align-items-center">
-    <div id="overlay">
-
-    </div>
-    <div class="container text-white text-center" id="header">
-        <h3 class="display-6 mb-0">SWAPNO PURAN</h3>
-        <h1 class="display-2">Making your dream vacation come true</h1>
-        <p class="lead d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ea
-            ratione? Consequuntur
-            ullam dicta ad recusandae repudiandae nam molestiae repellendus?
-        </p>
-        <button id="bookBtn" class="btn btn-primary btn-lg text-white px-5" data-bs-toggle="modal"
-            data-bs-target="#loginModal">LOGIN</button>
-    </div>
-</section>
 
 
 <div class="modal fade" tabindex="-1" role="dialog" id="loginModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Login Form</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4>SWAPNO <span>PURAN</span> ADMIN <span>LOGIN</span></h4>
             </div>
             <div class="modal-body">
                 <form #loginForm="ngForm">
@@ -68,7 +81,7 @@
                             *ngIf="passwordInput.invalid && passwordInput.touched">Please enter a password.</span>
                     </div>
                     <button type="button" [disabled]="loginForm.invalid || showLoading" name="button"
-                        class="btn login_btn" (click)="onLogin(loginForm.value)" data-bs-dismiss="modal">
+                        class="btn login_btn" (click)="onLogin(loginForm.value)" data-dismiss="modal">
                         <i *ngIf="showLoading" class="fas fa-spinner fa-spin"></i>&nbsp;&nbsp;
                         <span *ngIf="showLoading">Loading...</span>
                         <span *ngIf="!showLoading">Login</span>
@@ -76,7 +89,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn close_btn" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn close_btn" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
