New updates added

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2083,8 +2083,8 @@ h5.amenities-label {
     font-size: 3vw;
     color: white;
     font-weight: 500;
-    left: 20px;
-    bottom: 90px;
+    left: 5%;
+    bottom: 15%;
     cursor: pointer;
 }
 
