--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -97,7 +97,7 @@
             <p class="about-para-1">Swapno Puran Resort is located in Jotgiri, Howrah, only 13 kilometers away from the
                 holy river Ganga. It is a luxurious
                 property that will make you feel like royalty. There is plenty of artwork, home theater, balcony,
-                parking on property, a bar, and fireplaces. Swimming pool, picnic area, 24 hour security, garden, and
+                parking on property, and fireplaces. Swimming pool, picnic area, 24 hour security, garden, and
                 gym are the amenities included. It also has appliances such as refrigerator/freezer, microwave, oven,
                 electricity,
                 ceiling fans, water purification system , and a water heater. Swapno Puran Resort is a perfect balance
@@ -284,8 +284,6 @@
                     <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
                 </div>
             </a>
-
-
 
             <a data-toggle="modal" data-target="#dakshinTempleModal">
                 <div class="col-content">
@@ -577,7 +575,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/food-04.jpg" class="swipebox"><img src="assets/images/food-04.jpg"
+            <a href="assets/images/wedding-01.jpg" class="swipebox"><img src="assets/images/wedding-01.jpg"
                     class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
