--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <h2>
-                    <a class="navbar-brand" href="#">SWAPNO <span>PURAN</span>
+                    <a class="navbar-brand" href="#">SWAPNO <span>PURAN</span> RESORT
                         <p class="logo_caption">Admin Console</p>
                     </a>
                 </h2>
@@ -56,8 +56,8 @@
 
 
 
-<div class="modal fade" tabindex="-1" role="dialog" id="loginModal">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" data-backdrop="false" tabindex="-1" role="dialog" id="loginModal">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
