--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -341,8 +341,40 @@
                 </div>
             </a>
 
+            <a data-toggle="modal" data-target="#victoriaModal">
+                <div class="col-content">
+                    <img src="assets/images/victoria-memorial.jpg" alt="">
+                    <h5>Victoria Memorial</h5>
+                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+                </div>
+            </a>
+
+            <a data-toggle="modal" data-target="#zooModal">
+                <div class="col-content">
+                    <img src="assets/images/zoo.jpg" alt="">
+                    <h5>Alipore Zoological Garden</h5>
+                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+                </div>
+            </a>
+
+            <a data-toggle="modal" data-target="#planetariumModal">
+                <div class="col-content">
+                    <img src="assets/images/planetarium.jpg" alt="">
+                    <h5>M.P Birla Planetarium</h5>
+                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+                </div>
+            </a>
+
+            <a data-toggle="modal" data-target="#pakuriaModal">
+                <div class="col-content">
+                    <img src="assets/images/pakuria.jpg" alt="">
+                    <h5>Pakuria Hanuman Mandir</h5>
+                    <p>Click To Know More <i class="fas fa-arrow-right"></i></p>
+                </div>
+            </a>
         </div>
 </section>
+
 <div class="modal fade" id="belurMathModal" tabindex="-1" role="dialog">
     <!-- Modal1 -->
     <div class="modal-dialog">
@@ -500,6 +532,129 @@
     </div>
 </div>
 
+<div class="modal fade" id="victoriaModal" tabindex="-1" role="dialog">
+    <!-- Modal1 -->
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4>SWAPNO <span>PURAN</span> RESORT</h4>
+                <img src="assets/images/victoria-memorial-modal.jpg" alt=" " class="img-responsive">
+                <h5>VICTORIA MEMORIAL</h5>
+                <p>A majestic white marble monument situated in the middle of 64 acres of sprawling gardens,
+                    dominating the centre of the city of joy Kolkata. The Victoria Memorial was conceived by Lord Curzon
+                    as a fitting monument to Queen Victoria of the
+                    United Kingdom following her death in 1901.<strong>It is situated 21.5 kilometers away from
+                        Swapno Puran Resort.</strong></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="zooModal" tabindex="-1" role="dialog">
+    <!-- Modal1 -->
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4>SWAPNO <span>PURAN</span> RESORT</h4>
+                <img src="assets/images/zoo-modal.jpg" alt=" " class="img-responsive">
+                <h5>ALIPORE ZOOLOGICAL GARDEN</h5>
+                <p>It is India’s oldest formally stated zoo and is the busiest tourist attractions in Kolkata. Alipore
+                    zoo is most famous for having been a home to several indigenous species of mammals, reptiles and
+                    birds, spanning over the past 140 years.<strong>It is situated 21.3 kilometers away from
+                        Swapno Puran Resort.</strong></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="planetariumModal" tabindex="-1" role="dialog">
+    <!-- Modal1 -->
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4>SWAPNO <span>PURAN</span> RESORT</h4>
+                <img src="assets/images/planetarium-modal.jpg" alt=" " class="img-responsive">
+                <h5>M.P Birla Planetarium</h5>
+                <p>Situated at the famous Chowringhee Road right in the proximity of Victoria Memorial and St. Paul's
+                    Cathedral Birla planetarium is the largest planetarium in Asia and the second largest in the
+                    world. In addition to being a planetarium, Birla Planetarium also has an electronics laboratory and
+                    an astronomy gallery that has a collection of paintings and astronomical models.<strong>It is
+                        situated 21.5 kilometers away from
+                        Swapno Puran Resort.</strong></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="pakuriaModal" tabindex="-1" role="dialog">
+    <!-- Modal1 -->
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4>SWAPNO <span>PURAN</span> RESORT</h4>
+                <img src="assets/images/pakuria-modal.jpg" alt=" " class="img-responsive">
+                <h5>Pakuria Hanuman Mandir</h5>
+                <p>Dedicated to Lord Hanuman, the temple is known for its sheer holiness for centuries and attracts
+                    countless devotees from all over the country. Replicating the same divinity is Pakuria's Salasar
+                    Dham Hanuman Mandir with the constant chant of Hanuman Chalisa with an architecture that will surely
+                    mesmerize
+                    you.<strong>Only 4 kilometers away from Swapno Puran Resort.</strong></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <h3 class="title-w3-agileits title-black-wthree">Transportation Guide</h3>
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <div class="card-tr-box-part">
+                <figure class="tr-figure">
+                    <img src="assets/images/howrah-station.jpg" style="width: 100%; height: 70%;" alt="Station">
+                </figure>
+                
+                <h5 class="card-tr-title">Howrah Railway Station</h5>
+                <div class="card-tr-text">
+                    <p class="about-para-1">Situated 11.8 kilometers away from Swapno Puran Resort.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <div class="card-tr-box-part">
+                <figure class="tr-figure">
+                    <img src="assets/images/airport.jpeg" style="width: 100%; height: 50%;" alt="Airport">
+                </figure>
+               
+                <h5 class="card-tr-title">Netaji Subhash Chandra Bose International Airport</h5>
+                <div class="card-tr-text">
+                    <p class="about-para-1">Situated 23.3 kilometers away from Swapno Puran Resort.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <div class="card-tr-box-part">
+                <figure class="tr-figure">
+                    <img src="assets/images/bus-terminus.jpg" style="width: 100%; height: 60%;" alt="Bus Terminus">
+                </figure>
+                <h5 class="card-tr-title">Kona High Road Bus Terminus</h5>
+                <div class="card-tr-text">
+                    <p class="about-para-1">Situated 3 kilometers away from Swapno Puran Resort.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="advantages">
     <div class="container">
@@ -575,8 +730,8 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/wedding-01.jpg" class="swipebox"><img src="assets/images/wedding-01.jpg"
-                    class="img-responsive" alt="/">
+            <a href="assets/images/wedding-01.jpg" class="swipebox"><img
+                    src="assets/images/wedding-01.jpg" class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
