--- a/src/app/components/admin-console/admin-console.component.css
+++ b/src/app/components/admin-console/admin-console.component.css
@@ -10,19 +10,22 @@ http://creativecommons.org/licenses/by/3.0/
 ------------------------------------------------*/
 body {
     font-family: 'Open Sans', sans-serif;
+    overflow: auto;
+}
+
+.modal-open {
+    overflow: scroll;
 }
 
 #wrapper {
     width: 100%;
     background: #09192A;
-
 }
 
 #page-wrapper {
     padding: 15px 15px;
     min-height: 600px;
     background: #E5EBF2;
-
 
 }
 
@@ -316,6 +319,7 @@ footer p {
 .top-navbar .dropdown-menu>li>a:focus {
     color: #225081;
     background: none;
+    cursor: pointer;
 }
 
 .dropdown-tasks {
