--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -613,7 +613,7 @@
 </div>
 
 <div class="container">
-    <h3 class="title-w3-agileits title-black-wthree">Transportation Guide</h3>
+    <h3 class="title-w3-agileits title-black-wthree">Transport Facilities</h3>
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="card-tr-box-part">
